--- a/DarkMaze/docker-compose.yml
+++ b/DarkMaze/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - ./backend:/usr/src
       - ./reports:/reports
     command: >
-      sh -c "
+      sh -c 
       apt-get update && apt-get install -y python3 python3-pip &&
       pip3 install --no-cache-dir pylint flake8 &&
       mkdir -p /reports &&
@@ -67,6 +67,15 @@ services:
     # 1. Create a container using the frontend image.  
     # 2. Map the files in the frontend folder to the /app folder inside the container.  
     # 3. Map port 8088 in the container to port 8088 on the host machine.
+    build:
+      context: ./frontend
+    container_name: frontend
+    ports:
+      - "8088:8088"
+    volumes:
+      - ./frontend:/app
+    networks:
+      - sonar-network
     command: uvicorn src.main:app --host "0.0.0.0" --port 8088 --reload
 
   backend:
@@ -74,6 +83,15 @@ services:
     # 1. Create a container using the backend image.  
     # 2. Map the files in the backend folder to the /app folder inside the container.  
     # 3. Map port 8000 in the container to port 8000 on the host machine.
+    build:
+      context: ./backend
+    container_name: backend
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./backend:/app
+    networks:
+      - sonar-network
     command: uvicorn src.main:app --host "0.0.0.0" --port 8000 --reload
 
 networks:
