fix: update judge

--- a/DarkMaze/docker-compose.yml
+++ b/DarkMaze/docker-compose.yml
@@ -12,6 +12,7 @@ services:
   
   sonarqube:
     image: sonarqube:lts-community
+    container_name: sonarqube
     ports:
       - "9000:9000"
     environment:
@@ -30,12 +31,12 @@ services:
       - ./backend:/usr/src
       - ./reports:/reports
     command: >
-      sh -c 
+      sh -c "
       apt-get update && apt-get install -y python3 python3-pip &&
       pip3 install --no-cache-dir pylint flake8 &&
       mkdir -p /reports &&
       pylint --output-format=json /usr/src/**/*.py > /reports/pylint-report.json || true &&
-      flake8 --format=json /usr/src > /reports/flake8-report.json || true"
+      flake8 --format=json /usr/src > /reports/flake8-report.json || true
 
   sonar-scanner:
     image: sonarsource/sonar-scanner-cli
