--- a/DarkMaze/backend/Dockerfile
+++ b/DarkMaze/backend/Dockerfile
@@ -1,33 +1,23 @@
 # TODO: Install the backend dependency package into the app folder inside the container.
 
 # Use an official Python runtime as a parent image
-FROM python:3.11-slim
-
-# Create a non-root user for security
-RUN useradd --create-home appuser
+FROM python:3.11
 
 # Set the working directory inside the container to /app
 WORKDIR /app
 
-# Ensure the non-root user owns the directory
-RUN chown -R appuser /app
-
-# Copy only the dependency file first to leverage Docker caching
-COPY requirements.txt /app/
+# Copy the requirements.txt into the container at /app
+COPY ./requirements.txt /app/requirements.txt
 
 # Install any needed dependencies (including uvicorn)
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the entire backend application code into the container
-COPY src/ /app/
-COPY tests/ /app/
-# Switch to the non-root user
-USER appuser
+COPY . /app
 
 # Expose port 8000 for the backend app
 EXPOSE 8000
 
-# Set environment variables
 ENV PATH="/usr/local/bin:$PATH"
 
 # Set the default command to run the FastAPI app with uvicorn
