--- a/DarkMaze/backend/Dockerfile
+++ b/DarkMaze/backend/Dockerfile
@@ -1,29 +1,29 @@
 # Use an official Python runtime as a parent image
 FROM python:3.11-slim
 
-# Create a non-root user for security
+# Set a non-root user for security
 RUN useradd --create-home appuser
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy only necessary files to the container (avoid unnecessary files)
+# Ensure the non-root user owns the directory
+RUN chown -R appuser /app
+
+# Copy only requirements first to leverage Docker caching
 COPY requirements.txt /app/
 
-# Install dependencies
+# Install dependencies securely
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy only the relevant source code files
+# Copy the rest of the frontend code after dependencies are installed
 COPY src/ /app/
 
-# Ensure the non-root user owns the directory
-RUN chown -R appuser:appuser /app
-
-# Switch to the non-root user
+# Switch to non-root user
 USER appuser
 
-# Expose the FastAPI port
+# Expose port 8000
 EXPOSE 8000
 
-# Set the correct module path for Uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run the FastAPI app using uvicorn
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
