fix: backend Dockerfile

--- a/DarkMaze/backend/Dockerfile
+++ b/DarkMaze/backend/Dockerfile
@@ -15,7 +15,7 @@ RUN useradd -m -u 1000 myuser
 USER myuser
 
 # Copy the entire backend application code into the container
-COPY --chown=myuser:myuser src/ /app
+COPY --chown=myuser:myuser ./src/ /app/
 RUN chmod -R u+rX /app
 # Expose port 8000 for the backend app
 EXPOSE 8000
