--- a/DarkMaze/docker-compose.yml
+++ b/DarkMaze/docker-compose.yml
@@ -88,8 +88,8 @@ services:
     container_name: backend
     ports:
       - "8000:8000"
-    # volumes:
-    #   - ./backend:/app
+    volumes:
+      - ./backend:/app
     networks:
       - sonar-network
     command: uvicorn src.main:app --host "0.0.0.0" --port 8000 --reload
