--- a/DarkMaze/docker-compose.yml
+++ b/DarkMaze/docker-compose.yml
@@ -92,7 +92,7 @@ services:
       - ./backend:/app
     networks:
       - sonar-network
-    command: uvicorn src.main:app --host "0.0.0.0" --port 8000 --reload
+    command: uvicorn src.main:app --host "0.0.0.0" --port 8000
 
 networks:
   sonar-network:
