--- a/DarkMaze/backend/Dockerfile
+++ b/DarkMaze/backend/Dockerfile
@@ -7,7 +7,8 @@ RUN pip install --no-cache-dir -r /app/requirements.txt
 RUN useradd -m -u 1000 myuser
 RUN chown -R myuser:myuser /app
 
-USER myuser
 COPY --chown=myuser:myuser ./src/ /app/
+USER myuser
 
+EXPOSE 8000
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
