--- a/DarkMaze/docker-compose.yml
+++ b/DarkMaze/docker-compose.yml
@@ -79,7 +79,7 @@ services:
     networks:
       - sonar-network
     restart: always
-    command: uvicorn src.main:app --host "0.0.0.0" --port 8000
+    command: uvicorn app.main:app --host "0.0.0.0" --port 8000
     
   frontend: 
     # TODO:
