--- a/DarkMaze/backend/Dockerfile
+++ b/DarkMaze/backend/Dockerfile
@@ -4,11 +4,10 @@ WORKDIR /app
 COPY ./requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
 
-RUN useradd -m -u 1000 myuser
-RUN chown -R myuser:myuser /app
+RUN useradd -m -u 1000 nonrootuser
+RUN chown -R nonrootuser:nonrootuser /app
 
-COPY --chown=myuser:myuser ./src/ /app/
-USER myuser
+COPY --chown=nonrootuser:nonrootuser ./src /app
+USER nonrootuser
 
-EXPOSE 8000
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
