--- a/DarkMaze/backend/Dockerfile
+++ b/DarkMaze/backend/Dockerfile
@@ -1,13 +1,17 @@
-FROM python:3.11-slim
+FROM python:3.11
+
+RUN groupadd -r appgroup && \
+    useradd -r -m -g appgroup -d /app appuser && \
+    chmod 775 /app
+
 WORKDIR /app
 
-COPY ./requirements.txt /app/requirements.txt
+COPY --chown=appuser:appgroup ./requirements.txt /app/requirements.txt
+
 RUN pip install --no-cache-dir -r /app/requirements.txt
 
-RUN useradd -m -u 1000 nonrootuser
-RUN chown -R nonrootuser:nonrootuser /app
+COPY --chown=appuser:appgroup ./src /app/src
 
-COPY --chown=nonrootuser:nonrootuser ./src /app
-USER nonrootuser
+USER appuser
 
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
